kubernetesDeployments/deployment-APIWorker.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: droneapiworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droneapiworker
  template:
    metadata:
      labels:
        app: droneapiworker
        tier: backend
    spec:
      containers:
      - name: droneapiworker
        image: lesterthomas/droneapiworker:3.0.0
        ports:
        - name: droneapiworker
          containerPort: 1236
