kubernetesDeployments/statefulSet-APIWorker.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: droneapiworker
spec:
  selector:
    matchLabels:
      app: droneapiworker # has to match .spec.template.metadata.labels
  serviceName: "droneapiworker"
  replicas: 1
  template:
    metadata:
      labels:
        app: droneapiworker # has to match .spec.selector.matchLabels
        tier: backend
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: droneapiworker
        image: lesterthomas/droneapiworker:3.0.0
        ports:
        - containerPort: 1236
          name: droneapiworker
