kubernetesDeployments/service-APIServer.yaml
apiVersion: v1
kind: Service
metadata:
  name: droneapiserver
  labels:
    app: droneapiserver
    tier: frontend
spec:
  ports:
  - port: 1234
    targetPort: droneapiserver
    name: droneapiserver
  type: NodePort
  selector:
    app: droneapiserver
    tier: frontend
