kubernetesDeployments/service-APIWorker.yaml
apiVersion: v1
kind: Service
metadata:
  name: droneapiworker
  labels:
    app: droneapiworker
    tier: backend
spec:
  ports:
  - port: 1236
    name: droneapiworker
  clusterIP: None
  selector:
    app: droneapiworker
    tier: backend
