kubernetesDeployments/service-redis-commander.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  labels:
    app: redis-commander
    tier: backend
spec:
  ports:
  - port: 8081
    targetPort: redis-commander
    name: redis-commander
  type: NodePort
  selector:
    app: redis-commander
    tier: backend
